--- a/src/app/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -2,7 +2,7 @@
   <form #ventaForm="ngForm" (ngSubmit)="postBusqueda(ventaForm)">
     <div class="row">
       <div class="col-md-2">
-          <label><input type="radio" name="optionF" value="1" [(ngModel)]="options">Ida</label>
+          <label><input type="radio" name="optionF" value="1" [(ngModel)]="options" checked>Ida</label>
       </div>
       <div class="col-md-2">
           <label><input type="radio" name="optionF" value="2" [(ngModel)]="options">Ida y vuelta</label>
