--- a/src/app/formulario-vuelo-v2/formulario-vuelo-v2.component.html
+++ b/src/app/formulario-vuelo-v2/formulario-vuelo-v2.component.html
@@ -2,10 +2,10 @@
   <form #ventaForm="ngForm" (ngSubmit)="postBusqueda(ventaForm)">
     <div class="row">
       <div class="col-md-2">
-          <label><input type="radio" name="optionF" value="1" [(ngModel)]="options" checked>Ida</label>
+        <label><input type="radio" name="optionF" value="1" [(ngModel)]="options"> Ida </label>
       </div>
       <div class="col-md-2">
-          <label><input type="radio" name="optionF" value="2" [(ngModel)]="options">Ida y vuelta</label>
+        <label><input type="radio" name="optionF" value="2" [(ngModel)]="options"> Ida y vuelta </label>
       </div>
     </div>
     <div class="row">
@@ -62,7 +62,7 @@
                 max="{{ maxDate }}"
               />
             </div>
-            <div *ngIf="options==2">
+            <div *ngIf="options== '2'">
               <label for="fechaF">Fecha Vuelta: </label>
               <input
                 class="form-control"
